# claude-mp

./: .gitignore  LICENSE  PLAN.md  README.md  WORKFLOW.md  javascript_deno.txt  paths-to-keep.txt  xcode_spm_integration.md
.claude/: CLAUDE.md  settings.local.json
.claude-plugin/: marketplace.json
.githooks/: pre-commit
agents/: README.md
commands/: README.md
docs/brainstorms/: 2026-02-15-pkm-plugin-cli-integration-brainstorm.md  2026-02-16-plugin-versioning-strategy-brainstorm.md  (+9 more)
hooks/: README.md
mcp-servers/: README.md
plugins/pkm-plugin/: .local.md.example  LICENSE  README.md  pyproject.toml
plugins/pkm-plugin/.claude-plugin/: plugin.json
plugins/pkm-plugin/agents/: archivist.md  pkm-manager.md
plugins/pkm-plugin/commands/: vault.md
plugins/pkm-plugin/skills/obsidian-pkm-manager/: IMPROVEMENT_PLAN.md  SKILL.md
plugins/pkm-plugin/skills/obsidian-pkm-manager/references/: bases-patterns.md  excalibrain-metadata.md
plugins/pkm-plugin/skills/vault-architect/: IMPROVEMENT_PLAN.md  README.md  SKILL.md
plugins/pkm-plugin/skills/vault-architect/references/: chronos-syntax.md  collection-folder-pattern.md  quickadd-patterns.md  templater-api.md  templater-patterns.md
plugins/pkm-plugin/skills/vault-curator/: IMPROVEMENT_PLAN.md  README.md  SKILL.md
plugins/pkm-plugin/skills/vault-curator/references/: available-scripts.md  cli-patterns.md  consolidation-protocol.md  detailed_guide.md
plugins/pkm-plugin/skills/vault-curator/scripts/: extract_section_to_meeting.py  helper.py  merge_notes.py  redirect_links.py
skills/: README.md
(+933 files in other folders)
